k8s/sanbox-service.yml
kind: Service
apiVersion: v1
metadata:
  name: sandbox-service
  labels:
    app: sandbox
spec:
  selector:
    app: sandbox-app
  type: ClusterIP
  ports:
  - name: main-sandbox-port
    port: 80
    targetPort: 5173
