k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codespace-ingress
  labels:
    app.kubernetes.io/name: codespace-ingress
spec:
  ingressClassName: nginx
  rules:
  # All preview hosts should route to the router, which extracts the sandbox ID
  - host: "*.preview.localhost"
    http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: router-service
            port:
              number: 80
